--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
         if (data.ok) {
             displayText += `Status: ✅ SUCCESS\n`;
             displayText += `Amount: ${data.amount}\n`;
-            displayText += `Suffix Found: ${data.suffix}\n`;
+            //displayText += `Suffix Found: ${data.suffix}\n`;
             displayText += `Process Time: ${data.timeSeconds} seconds\n`;
             displayText += `Message: ${data.message}`;
             output.style.color = '#63e6be'; // Green glow for success
