--- a/public/index.html
+++ b/public/index.html
@@ -198,9 +198,10 @@
 
 
     <label for="hash">Base64 Hash:</label>
-    <input id="hash" type="text" placeholder="Enter Base64 hash string">
+    <!--<input id="hash" type="text" placeholder="Enter Base64 hash string">-->
+    <input id="hash" type="text" value="Y0w3YmJhbmU6N2IxN2FiZjY2MjhiYzc2NDE0MTgzMjZjYTllOTVjNWI6MTc2MDMzNzAwODEzMDpCQnNMeElsUjo3ZmRhODgyMTQ1MTNlZjM4ZWEwNjk3NWJkODA3ZWRkYQ==" readonly>
     <label for="phone">Phone Number:</label>
-    <input id="phone" type="tel" placeholder="Enter phone number (e.g., 2738437434)">
+    <input id="phone" type="tel" placeholder="Enter Number (e.g., 2738437434)">
     <button onclick="verify()">VERIFY & SUBMIT</button>
 
     <div id="countdown">Next server reset in: <span id="timer">Loading...</span></div>
